--- a/index.html
+++ b/index.html
@@ -1,25 +1,97 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<title>Fantasy Focus Photography</title>
-	<!-- Add any necessary meta tags, links, or stylesheets here -->
-</head>
-<body>
-	<header>
-		<nav>
-			<ul>
-				<li><a href="#">Home</a></li>
-				<li><a href="#">Public Work</a></li>
-				<li><a href="#">Contact Us</a></li>
-			</ul>
-		</nav>
-		<h1>Fantasy Focus Photography</h1>
-	</header>
-	<main>
-		<!-- Add any necessary content here -->
-	</main>
-	<footer>
-		<!-- Add any necessary footer content here -->
-	</footer>
-</body>
+<html data-wf-domain="enchantedshutterbug.github.io">
+	<head>
+		<link href="https://enchantedshutterbug.github.io/styling/webflow.css" rel="stylesheet" type="text/css"/>
+		<script src="https://enchantedshutterbug.github.io/javascript/hrg4paa.js" type="text/javascript"></script>
+		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+		<!-- Global site tag (gtag.js) - Google Analytics for adds n stuff-->
+	</head>
+	<body class="body">
+		<div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease" data-easing2="ease" role="banner" class="nav w-nav">
+		<div class="nav--container w-container">
+			<div class="brand-container"><!-- logo -->
+				<a href="/" aria-current="page" class="brand w-nav-brand w--current">
+					<img src="" alt="potato" class="navbar-wordmark"/>
+				</a>
+			</div>
+			<nav role="navigation" class="nav-menu w-nav-menu">
+				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+					<div class="dropdown-toggle w-dropdown-toggle">
+						<div class="dropdown-icon w-icon-dropdown-toggle"></div>
+						<div class="nav-item">Japan</div>
+					</div>
+					<nav class="dropdown-list w-dropdown-list">
+						<a href="/classes" class="dropdown-link w-dropdown-link">Vending Machines</a>
+						<a href="/races" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="/backgrounds" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+					</nav>
+				</div>
+				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+					<div class="dropdown-toggle w-dropdown-toggle">
+						<div class="dropdown-icon w-icon-dropdown-toggle"></div>
+						<div class="nav-item">Alaska</div>
+					</div>
+					<nav class="dropdown-list w-dropdown-list">
+						<a href="" class="dropdown-link w-dropdown-link">Coming Soon</a>
+						<!--<a href="/classes" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="/races" class="dropdown-link w-dropdown-link">Cosplay Shots</a>-->
+					</nav>
+				</div>
+				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+					<div class="dropdown-toggle w-dropdown-toggle">
+						<div class="nav-item"><a href="">About Us</a></div>
+					</div>
+				</div>
+				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
+					<div class="dropdown-toggle w-dropdown-toggle">
+						<div class="nav-item"><a href="">Contact Us</a></div>
+					</div>
+				</div>
+			</nav>
+			<div class="menu-button w-nav-button">
+				<div class="menu-icon-container">
+					<div class="icon w-icon-nav-menu"></div>
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	<div class="section wf-section">
+		<div class="container-grid-menu">
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+			<a href="/classes" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato" class="grid-menu-item-image"/>
+			</a>
+		</div>
+	</div>
+		<div class="footer wf-section">
+			<div class="footer-container">
+				<div class="brand-container">
+					<img src="" width="56" alt="potato" class="image-3"/>
+				</div>
+			</div>
+		</div>
+		<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e9abe042afc3c7bea29a7c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script src="https://enchantedshutterbug.github.io/javascript/webflow.9b9973220.js" type="text/javascript"></script>	
+	</body>
 </html>
