--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
-		<link href="https://enchantedshutterbug.github.io/styling/webflow.css" rel="stylesheet" type="text/css"/>
+		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 		<!-- Global site tag (gtag.js) - Google Analytics for adds n stuff-->
