--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
-		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
-		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
+		<link href="C:\Users\Mank\Desktop\Websites\Fantasy Focus\styling\webflow.css" rel="stylesheet" type="text/css"/>
+		<script src="C:\Users\Mank\Desktop\Websites\Fantasy Focus\javascript\hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 		<!-- Global site tag (gtag.js) - Google Analytics for adds n stuff-->
 	</head>
@@ -11,7 +11,7 @@
 		<div class="nav--container w-container">
 			<div class="brand-container"><!-- logo -->
 				<a href="/" aria-current="page" class="brand w-nav-brand w--current">
-					<img src="" alt="potato" class="navbar-wordmark"/>
+					<img src="T:\Downloads\FFP logo 1.png" alt="logo potato" class="navbar-wordmark"/>
 				</a>
 			</div>
 			<nav role="navigation" class="nav-menu w-nav-menu">
@@ -21,9 +21,9 @@
 						<div class="nav-item">Japan</div>
 					</div>
 					<nav class="dropdown-list w-dropdown-list">
-						<a href="/classes" class="dropdown-link w-dropdown-link">Vending Machines</a>
-						<a href="/races" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/backgrounds" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+						<a href="/japan/vendingmachines" class="dropdown-link w-dropdown-link">Vending Machines</a>
+						<a href="/japan/nature" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="/japan/cosplay" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
@@ -39,12 +39,12 @@
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
 					<div class="dropdown-toggle w-dropdown-toggle">
-						<div class="nav-item"><a href="">About Us</a></div>
+						<div class="nav-item"><a href="/aboutus">About Us</a></div>
 					</div>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
 					<div class="dropdown-toggle w-dropdown-toggle">
-						<div class="nav-item"><a href="">Contact Us</a></div>
+						<div class="nav-item"><a href="/contact">Contact Us</a></div>
 					</div>
 				</div>
 			</nav>
@@ -57,41 +57,42 @@
 	</div>
 	
 	<div class="section wf-section">
+		<h3>This Months Highlights</h3>
 		<div class="container-grid-menu">
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 1" class="grid-menu-item-image"/>
 			</a>
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 2" class="grid-menu-item-image"/>
 			</a>
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 3" class="grid-menu-item-image"/>
 			</a>
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 4" class="grid-menu-item-image"/>
 			</a>
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 5" class="grid-menu-item-image"/>
 			</a>
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 6" class="grid-menu-item-image"/>
 			</a>
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 7" class="grid-menu-item-image"/>
 			</a>
-			<a href="/classes" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato" class="grid-menu-item-image"/>
+			<a href="/" class="grid-menu-item w-inline-block">
+				<img src="" alt="potato 8" class="grid-menu-item-image"/>
 			</a>
 		</div>
 	</div>
 		<div class="footer wf-section">
 			<div class="footer-container">
 				<div class="brand-container">
-					<img src="" width="56" alt="potato" class="image-3"/>
+					<img src="" width="56" alt="bottom potato" class="image-3"/>
 				</div>
 			</div>
 		</div>
 		<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e9abe042afc3c7bea29a7c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="/javascript/webflow.9b9973220.js" type="text/javascript"></script>	
+		<script src="C:\Users\Mank\Desktop\Websites\Fantasy Focus\javascript\webflow.9b9973220.js" type="text/javascript"></script>	
 	</body>
 </html>
