--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
-		<link href="C:\Users\Mank\Desktop\Websites\Fantasy Focus\styling\webflow.css" rel="stylesheet" type="text/css"/>
-		<script src="C:\Users\Mank\Desktop\Websites\Fantasy Focus\javascript\hrg4paa.js" type="text/javascript"></script>
+		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
+		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 		<!-- Global site tag (gtag.js) - Google Analytics for adds n stuff-->
 	</head>
@@ -11,7 +11,7 @@
 		<div class="nav--container w-container">
 			<div class="brand-container"><!-- logo -->
 				<a href="" aria-current="page" class="brand w-nav-brand w--current">
-					<img src="T:\Downloads\FFP logo 1.png" alt="logo potato" class="navbar-wordmark"/>
+					<img src="/logos/FFP logo 1.png" alt="logo potato" class="navbar-wordmark"/>
 				</a>
 			</div>
 			<nav role="navigation" class="nav-menu w-nav-menu">
@@ -93,6 +93,6 @@
 			</div>
 		</div>
 		<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e9abe042afc3c7bea29a7c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-		<script src="C:\Users\Mank\Desktop\Websites\Fantasy Focus\javascript\webflow.9b9973220.js" type="text/javascript"></script>	
+		<script src="/javascript/webflow.9b9973220.js" type="text/javascript"></script>	
 	</body>
 </html>
