--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease" data-easing2="ease" role="banner" class="nav w-nav">
 		<div class="nav--container w-container">
 			<div class="brand-container"><!-- logo -->
-				<a href="" aria-current="page" class="brand w-nav-brand w--current">
+				<a href="/" aria-current="page" class="brand w-nav-brand w--current">
 					<img src="/logos/FFP logo 1.png" alt="logo potato" class="navbar-wordmark"/>
 				</a>
 			</div>
