--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
+		<title>Fantasy Focus Photography</title>
 		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
