--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 			</div>
 		</div>
 	</div>
-	
+	<div class="section wf-section">
+		<h2>Freelance Photography for Freelance Cosplayers</h2>
+	</div>
 	<div class="section wf-section">
 		<h3>This Months Highlights</h3>
 		<div class="container-grid-menu">
