--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<div data-collapse="medium" data-animation="over-right" data-duration="200" data-doc-height="1" data-easing="ease" data-easing2="ease" role="banner" class="nav w-nav">
 		<div class="nav--container w-container">
 			<div class="brand-container"><!-- logo -->
-				<a href="/" aria-current="page" class="brand w-nav-brand w--current">
+				<a href="/index.html" aria-current="page" class="brand w-nav-brand w--current">
 					<img src="/logos/FFP logo 1.png" alt="logo potato" class="navbar-wordmark"/>
 				</a>
 			</div>
@@ -22,9 +22,9 @@
 						<div class="nav-item">Japan</div>
 					</div>
 					<nav class="dropdown-list w-dropdown-list">
-						<a href="/japan/vendingmachines" class="dropdown-link w-dropdown-link">Vending Machines</a>
-						<a href="/japan/nature" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/japan/cosplay" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+						<a href="/japan/vendingmachines/vendingmachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
+						<a href="/japan/nature/nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="/japan/cosplay/cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
