--- a/Japan/VendingMachines/VendingMachines.html
+++ b/Japan/VendingMachines/VendingMachines.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
-		<title>Japaneese Vending Machines</title>
+		<title>Japanese Vending Machines</title>
 		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
