--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 						<div class="nav-item">Japan</div>
 					</div>
 					<nav class="dropdown-list w-dropdown-list">
-						<a href="/japan/vendingmachines/vendingmachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
-						<a href="/japan/nature/nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/japan/cosplay/cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+						<a href="/Japan/VendingMachines/VendingMachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
+						<a href="/Japan/Nature/Nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="/Japan/Cosplay/Cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
