--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 		<div class="footer wf-section">
 			<div class="footer-container">
 				<div class="brand-container">
-					<img src="" width="56" alt="bottom potato" class="image-3"/>
+					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
+						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3"/>
+					</a>
 				</div>
 			</div>
 		</div>
