--- a/Japan/VendingMachines/VendingMachines.html
+++ b/Japan/VendingMachines/VendingMachines.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>Japanese Vending Machines</title>
 		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
+		<link href="/styling/gallerystyling.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
+		<script src="/javascript/gallery.js" type="text/javascript"></script>
 		<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 		<!-- Global site tag (gtag.js) - Google Analytics for adds n stuff-->
 	</head>
@@ -22,9 +24,9 @@
 						<div class="nav-item">Japan</div>
 					</div>
 					<nav class="dropdown-list w-dropdown-list">
-						<a href="/japan/vendingmachines/vendingmachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
-						<a href="/japan/nature/nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/japan/cosplay/cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
+						<a href="/Japan/VendingMachines/VendingMachines.html" class="dropdown-link w-dropdown-link">Vending Machines</a>
+						<a href="/Japan/Nature/Nature.html" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="/Japan/Cosplay/Cosplay.html" class="dropdown-link w-dropdown-link">Cosplay Shots</a>
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
@@ -57,41 +59,97 @@
 		</div>
 	</div>
 	<div class="section wf-section">
-		<h2>Freelance Photography for Freelance Cosplayers</h2>
+		<h2>Vending Machines from all over Japan!</h2>
 	</div>
-	<div class="section wf-section">
-		<h3>This Months Highlights</h3>
-		<div class="container-grid-menu">
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 1" class="grid-menu-item-image"/>
-			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 2" class="grid-menu-item-image"/>
-			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 3" class="grid-menu-item-image"/>
-			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 4" class="grid-menu-item-image"/>
-			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 5" class="grid-menu-item-image"/>
-			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 6" class="grid-menu-item-image"/>
-			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 7" class="grid-menu-item-image"/>
-			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
-				<img src="" alt="potato 8" class="grid-menu-item-image"/>
-			</a>
+			<!-- start of gallery -->
+		<div class="container">
+
+		  <!-- Full-width images with number text -->
+		  <div class="mySlides">
+			<div class="numbertext">1 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+
+		  <div class="mySlides">
+			<div class="numbertext">2 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+
+		  <div class="mySlides">
+			<div class="numbertext">3 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+
+		  <div class="mySlides">
+			<div class="numbertext">4 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+
+		  <div class="mySlides">
+			<div class="numbertext">5 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+
+		  <div class="mySlides">
+			<div class="numbertext">6 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+		  
+		  <div class="mySlides">
+			<div class="numbertext">7 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+		  
+		  <div class="mySlides">
+			<div class="numbertext">8 / 8</div>
+			  <img src="/Japan/VendingMachines/imgs/" style="width:100%">
+		  </div>
+
+
+		  <!-- Next and previous buttons -->
+		  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+		  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+
+		  <!-- Image text -->
+		  <div class="caption-container">
+			<p id="caption"></p>
+		  </div>
+
+		  <!-- Thumbnail images -->
+		  <div class="row">
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(2)" alt="Slide 2">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(3)" alt="Slide 3">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(4)" alt="Slide 4">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(5)" alt="Slide 5">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(6)" alt="Slide 6">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(7)" alt="Slide 7">
+			</div>
+			<div class="column">
+			  <img class="demo cursor" src="/Japan/VendingMachines/imgs/" style="width:100%" onclick="currentSlide(8)" alt="Slide 8">
+			</div>
+		  </div>
 		</div>
-	</div>
+		<!-- end of gallery -->
 		<div class="footer wf-section">
 			<div class="footer-container">
 				<div class="brand-container">
-					<img src="" width="56" alt="bottom potato" class="image-3"/>
+					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
+						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3"/>
+					</a>				
 				</div>
 			</div>
 		</div>
