--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
 					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
 						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3"/>
 					</a>
+					<a href="">
+						<img src="/logos/instagram.png" width="56" alt="bottom potato" class="image-3"/>
+					</a>
 				</div>
 			</div>
 		</div>
