--- a/Japan/VendingMachines/VendingMachines.html
+++ b/Japan/VendingMachines/VendingMachines.html
@@ -149,7 +149,10 @@
 				<div class="brand-container">
 					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
 						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3"/>
-					</a>				
+					</a>
+					<a href="">
+						<img src="/logos/instagram.png" width="56" alt="bottom potato" class="image-3"/>
+					</a>
 				</div>
 			</div>
 		</div>
