--- a/index.html
+++ b/index.html
@@ -90,12 +90,12 @@
 	</div>
 		<div class="footer wf-section">
 			<div class="footer-container">
-				<div class="row">
+				<div class="row-webflow">
 					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
-						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3 column"/>
+						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
 					<a href="">
-						<img src="/logos/instagram.png" width="56" alt="bottom potato" class="image-3 column"/>
+						<img src="/logos/instagram.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
 				</div>
 			</div>
