--- a/index.html
+++ b/index.html
@@ -65,25 +65,25 @@
 			<a href="/" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 1" class="grid-menu-item-image"/>
 			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 2" class="grid-menu-item-image"/>
 			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 3" class="grid-menu-item-image"/>
 			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 4" class="grid-menu-item-image"/>
 			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 5" class="grid-menu-item-image"/>
 			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 6" class="grid-menu-item-image"/>
 			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 7" class="grid-menu-item-image"/>
 			</a>
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 8" class="grid-menu-item-image"/>
 			</a>
 		</div>
@@ -94,7 +94,7 @@
 					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
 						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
-					<a href="">
+					<a href="https://www.instagram.com/fantasyfocusphotography/">
 						<img src="/logos/instagram.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
 				</div>
