--- a/Japan/VendingMachines/VendingMachines.html
+++ b/Japan/VendingMachines/VendingMachines.html
@@ -36,8 +36,8 @@
 					</div>
 					<nav class="dropdown-list w-dropdown-list">
 						<a href="" class="dropdown-link w-dropdown-link">Coming Soon</a>
-						<!--<a href="/classes" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/races" class="dropdown-link w-dropdown-link">Cosplay Shots</a>-->
+						<!--<a href="" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="" class="dropdown-link w-dropdown-link">Cosplay Shots</a>-->
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
@@ -150,7 +150,7 @@
 					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
 						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
-					<a href="">
+					<a href="https://www.instagram.com/fantasyfocusphotography/">
 						<img src="/logos/instagram.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
 				</div>
