--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 					</div>
 					<nav class="dropdown-list w-dropdown-list">
 						<a href="" class="dropdown-link w-dropdown-link">Coming Soon</a>
-						<!--<a href="/classes" class="dropdown-link w-dropdown-link">Nature Shots</a>
-						<a href="/races" class="dropdown-link w-dropdown-link">Cosplay Shots</a>-->
+						<!--<a href="" class="dropdown-link w-dropdown-link">Nature Shots</a>
+						<a href="" class="dropdown-link w-dropdown-link">Cosplay Shots</a>-->
 					</nav>
 				</div>
 				<div data-hover="true" data-delay="0" class="dropdown w-dropdown">
@@ -62,7 +62,7 @@
 	<div class="section wf-section">
 		<h3>This Months Highlights</h3>
 		<div class="container-grid-menu">
-			<a href="/" class="grid-menu-item w-inline-block">
+			<a href="" class="grid-menu-item w-inline-block">
 				<img src="" alt="potato 1" class="grid-menu-item-image"/>
 			</a>
 			<a href="" class="grid-menu-item w-inline-block">
