--- a/Japan/Cosplay/Cosplay.html
+++ b/Japan/Cosplay/Cosplay.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html data-wf-domain="enchantedshutterbug.github.io">
 	<head>
-		<title>Japanese Parks and Nature Shots</title>
+		<title>Japanese Cosplay</title>
 		<link href="/styling/webflow.css" rel="stylesheet" type="text/css"/>
 		<link href="/styling/gallerystyling.css" rel="stylesheet" type="text/css"/>
 		<script src="/javascript/hrg4paa.js" type="text/javascript"></script>
@@ -59,7 +59,7 @@
 		</div>
 	</div>
 	<div class="section wf-section">
-		<h2>Vending Machines from all over Japan!</h2>
+		<h2>Cosplay from all over Japan!</h2>
 	</div>
 			<!-- start of gallery -->
 		<div class="container">
@@ -67,42 +67,42 @@
 		  <!-- Full-width images with number text -->
 		  <div class="mySlides">
 			<div class="numbertext">1 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">2 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">3 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">4 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">5 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 
 		  <div class="mySlides">
 			<div class="numbertext">6 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 		  
 		  <div class="mySlides">
 			<div class="numbertext">7 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 		  
 		  <div class="mySlides">
 			<div class="numbertext">8 / 8</div>
-			  <img src="/Japan/Nature/imgs/" style="width:100%">
+			  <img src="/Japan/Cosplay/imgs/" style="width:100%">
 		  </div>
 
 
@@ -118,28 +118,28 @@
 		  <!-- Thumbnail images -->
 		  <div class="row">
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(1)" alt="Slide 1">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(2)" alt="Slide 2">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(2)" alt="Slide 2">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(3)" alt="Slide 3">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(3)" alt="Slide 3">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(4)" alt="Slide 4">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(4)" alt="Slide 4">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(5)" alt="Slide 5">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(5)" alt="Slide 5">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(6)" alt="Slide 6">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(6)" alt="Slide 6">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(7)" alt="Slide 7">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(7)" alt="Slide 7">
 			</div>
 			<div class="column">
-			  <img class="demo cursor" src="/Japan/Nature/imgs/" style="width:100%" onclick="currentSlide(8)" alt="Slide 8">
+			  <img class="demo cursor" src="/Japan/Cosplay/imgs/" style="width:100%" onclick="currentSlide(8)" alt="Slide 8">
 			</div>
 		  </div>
 		</div>
