--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 				</div>
 			</div>
 		</div>
-		<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=5e9abe042afc3c7bea29a7c1" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+		<script src="/javascript/jquery-3.5.1.min.js" type="text/javascript"></script>
 		<script src="/javascript/webflow.9b9973220.js" type="text/javascript"></script>	
 	</body>
 </html>
