--- a/contact/contact.html
+++ b/contact/contact.html
@@ -101,10 +101,10 @@
 			<div class="footer-container">
 				<div class= "row-webflow">
 					<a href="https://www.facebook.com/people/Fantasy-Focus-Photography/100092524812822/">
-						<img src="C:\Users\Mank\Desktop\Websites\Fantasy Focus\logos\facebook.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
+						<img src="/logos/facebook.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
 					<a href="https://www.instagram.com/fantasyfocusphotography/">
-						<img src="C:\Users\Mank\Desktop\Websites\Fantasy Focus\logos\instagram.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
+						<img src="/logos/instagram.png" width="56" alt="bottom potato" class="image-3 column-webflow"/>
 					</a>
 				</div>
 			</div>
