--- a/contact/contact.html
+++ b/contact/contact.html
@@ -68,7 +68,7 @@
           <input type="hidden" name="_captcha" value="false">
 
 		  <!-- move to sucess page
-          <input type="hidden" name="_next" value="enchantedshutterbug.github.io/success.html" > -->
+          <input type="hidden" name="_next" value="enchantedshutterbug.github.io/contact/success.html" > -->
 
           <div class="col-md-6">
             <label for="firstName" class="form-label">First Name</label>
